--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
 	<div id="page-container">
 		<div>
 			<ul class="topnav">
-				<li><a href="" class="logo">VR</a></li>
-				<li><a href="">Início</a></li>
-				<li><a href="">Contato</a></li>
-				<li class="right"><a class="active" href="">Sobre</a></li>
+				<li><a href="/index.html" class="logo">VR</a></li>
+				<li><a href="/index.html">Início</a></li>
+				<li><a onclick="oneVsOne();">1 VS 1</a></li>
+				<li><a onclick="oneVsCpu();">1 VS CPU</a></li>
+				<li><a href="pages/contact.html">Contato</a></li>
+				<li class="right"><a class="active" href="pages/about.html">Sobre</a></li>
 			</ul>
 		</div>
 
 		<div id="content-wrap">
-			<h1>TIC-TAC-TOE</h1>
+			<h1>Tic Tac Toe</h1>
 			<p id="ins">
 				O jogo começa apenas tocando em caixa
 				<br>
 				<br>
 				O primeiro jogador começa como <b>Jogador X</b>
 				<br>
+				<br>
 				E
+				<br>
 				<br>
 				Segundo Jogador como <b>Jogador O</b>
 			</p>
@@ -80,12 +84,18 @@
 			<!-- Space to show player turn -->
 			<p id="print"></p>
 			<br><br>
+			<div class="popup_box">
+				<h1>Escolha entre "X" ou "O"</h1>
+				<div class="btns">
+				  <a href="#" class="btn1">X</a>
+				  <a href="#" class="btn2">O</a>
+				</div>
+			  </div>
 		</div>
 
 		<div>
 			<footer>
 				<p>Autor: Vivaldo Roque<br>
-					<a style="color: white;" href="mailto:2001vivaldo@gmail.com">2001vivaldo@gmail.com</a>
 				</p>
 			</footer>
 		</div>
