update cross and circle elements

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
         <div class="grid-container">
           <div>
-            <input
-              type="text"
+            <button
+              type="button"
               class="btn"
               id="b1"
               onclick="handleClickButton(1);"
@@ -51,8 +51,8 @@
             />
           </div>
           <div>
-            <input
-              type="text"
+            <button
+              type="button"
               id="b2"
               class="btn"
               onclick="handleClickButton(2);"
@@ -60,8 +60,8 @@
             />
           </div>
           <div>
-            <input
-              type="text"
+            <button
+              type="button"
               id="b3"
               class="btn"
               onclick="handleClickButton(3);"
@@ -70,8 +70,8 @@
           </div>
 
           <div>
-            <input
-              type="text"
+            <button
+              type="button"
               id="b4"
               class="btn"
               onclick="handleClickButton(4);"
@@ -79,8 +79,8 @@
             />
           </div>
           <div>
-            <input
-              type="text"
+            <button
+              type="button"
               id="b5"
               class="btn"
               onclick="handleClickButton(5);"
@@ -88,8 +88,8 @@
             />
           </div>
           <div>
-            <input
-              type="text"
+            <button
+              type="button"
               id="b6"
               class="btn"
               onclick="handleClickButton(6);"
@@ -98,8 +98,8 @@
           </div>
 
           <div>
-            <input
-              type="text"
+            <button
+              type="button"
               id="b7"
               class="btn"
               onclick="handleClickButton(7);"
@@ -107,8 +107,8 @@
             />
           </div>
           <div>
-            <input
-              type="text"
+            <button
+              type="button"
               id="b8"
               class="btn"
               onclick="handleClickButton(8);"
@@ -116,8 +116,8 @@
             />
           </div>
           <div>
-            <input
-              type="text"
+            <button
+              type="button"
               id="b9"
               class="btn"
               onclick="handleClickButton(9);"
