--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <script src="./js/ttt.js"></script>
+    <script src="./js/script.js"></script>
     <title>Tic Tac Toe</title>
   </head>
 
