--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
 
 <body>
 	<script src="../js/prism.js"></script>
-	<div id="page-container">
+	<div class="container">
 		<div>
 			<ul class="topnav">
 				<li><a href="/index.html" class="logo">VR</a></li>
@@ -20,7 +20,7 @@
 			</ul>
 		</div>
 
-		<div id="content-wrap" style="text-align: justify; padding: 10px;">
+		<div class="content-wrap" style="text-align: justify; padding: 10px;">
 			<h1 style="text-align: center;">Tic tac Toe, jogo da velha ou jogo do galgo</h1>
 			<p>
 				Em teoria da decisão, o minimax (ou minmax) é um método para minimizar a possível perda máxima. Pode ser considerado como a maximização do ganho mínimo (maximin). Começa-se com dois jogadores 0-0 da teoria dos jogos, cobrindo ambos os casos em que os jogadores tomam caminhos alternados (por rodadas) ou simultaneamente. Pode-se estender o conceito para jogos mais complexos e para tomada de decisão na presença de incertezas. Nesse caso, não existe outro jogador, as consequências das decisões dependem de fatores desconhecidos.
