--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <div class="container">
     <div>
       <ul class="topnav">
-        <li><a href="/index.html" class="logo">VR</a></li>
+        <!-- <li><a href="/index.html" class="logo">VR</a></li> -->
+        <li><a href="https://vivaldo-roque.github.io/TicTacToe/" class="logo">VR</a></li>
         <li><a href="pages/contact.html">Contato</a></li>
         <li class="right">
           <a class="active" href="pages/about.html">Sobre</a>
