--- a/pages/about.html
+++ b/pages/about.html
@@ -13,8 +13,10 @@
 	<div class="container">
 		<div>
 			<ul class="topnav">
-				<li><a href="/index.html" class="logo">VR</a></li>
-				<li><a href="/index.html">Início</a></li>
+				<!-- <li><a href="/index.html" class="logo">VR</a></li> -->
+				<li><a href="https://vivaldo-roque.github.io/TicTacToe/" class="logo">VR</a></li>
+				<!-- <li><a href="/index.html">Início</a></li> -->
+				<li><a href="https://vivaldo-roque.github.io/TicTacToe/">Início</a></li>
 				<li><a href="contact.html">Contato</a></li>
 				<li class="right"><a class="active" href="about.html">Sobre</a></li>
 			</ul>
