--- a/pages/about.html
+++ b/pages/about.html
@@ -21,8 +21,8 @@
 				<li><a href="../index.html" class="logo">VR</a></li>
 				<li id="home"><a href="../index.html">Início</a></li>
 				<li id="contact"><a href="./contact.html">Contato</a></li>
-				<li id="about" class="right">
-					<a class="active" href="./about.html">Sobre</a>
+				<li id="about">
+					<a href="./about.html">Sobre</a>
 				</li>
 			</ul>
 		</div>
