--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <li><a href="./index.html" class="logo">VR</a></li>
                 <li id="home"><a  href="./index.html">Início</a></li>
                 <li id="contact"><a  href="./pages/contact.html">Contato</a></li>
-                <li id="about" class="right">
-                    <a class="active" href="./pages/about.html">Sobre</a>
+                <li id="about">
+                    <a href="./pages/about.html">Sobre</a>
                 </li>
             </ul>
         </div>
