--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,8 +7,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="../imgs/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../imgs/favicon/favicon-16x16.png">
-    <link rel="manifest" href="../imgs/favicon/site.webmanifest">
+    <link rel="manifest" href="../manifest.json">
     <script src="../js/navigation.js"></script>
+    <script src="../js/app.js"></script>
     <title> Tic Tac Toe </title>
 </head>
 
@@ -28,7 +29,7 @@
             <br><br>
             <div class="cover2">
                 <div>
-                    <img class="avatar" src="https://github.com/Vivaldo-Roque.png" alt="github image">
+                    <img class="avatar" src="../imgs/avatar.jpg" alt="github image">
                     <h3>Vivaldo Roque</h3>
                 </div>
                 <div style="display: flex; flex-direction: column;">
