--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/ttt.js"></script>
     <script src="./js/navigation.js"></script>
+    <script src="./js/app.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="./imgs/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./imgs/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./imgs/favicon/site.webmanifest">
+    <link rel="manifest" href="./manifest.json">
     <title>Tic Tac Toe</title>
 </head>
 
