--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
         </div>
     </div>
 
+    <script src="../js/navigation.js"></script>
+	<script src="../js/app.js"></script>
+
 </body>
 
 </html>
