--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
         </div>
     </div>
 
-    <script src="../js/navigation.js"></script>
-	<script src="../js/app.js"></script>
+    <script src="./js/navigation.js"></script>
+	<script src="./js/app.js"></script>
 
 </body>
 
