Added PWA and Fixed issue on Firefox

--- a/pages/about.html
+++ b/pages/about.html
@@ -71,7 +71,7 @@
 				uma
 				dada profundidade) é mostrado abaixo, em pseudocódigo.
 			</p>
-			<div style="max-width: 100%;">
+			<div style="max-width: 100%; margin-top: 25px; margin-bottom: 25px;">
 				<pre style="overflow: scroll;"><code class="language-wiki">ROTINA minimax(nó, profundidade, maximizador)
 						SE nó é um nó terminal OU profundidade = 0 ENTÃO
 							RETORNE o valor da heurística do nó
@@ -93,7 +93,7 @@
 					FIM ROTINA</code></pre>
 			</div>
 			<br><br>
-			<div style="width: auto; height: auto;">
+			<div style="width: auto; height: auto; margin-top: 25px; margin-bottom: 100px;">
 				<img src="../imgs/diagram.png" alt="Minimax" style="max-width:100%;
 	max-height:100%;">
 			</div>
@@ -103,7 +103,7 @@
 
 		<div>
 			<footer>
-				<p>Autor: Vivaldo Roque<br>
+				<p>Autor: Vivaldo Roque
 				</p>
 			</footer>
 		</div>
