--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,15 +16,15 @@
     <div class="container">
         <div>
             <ul class="topnav">
-				<li><a href="../index.html" class="logo">VR</a></li>
-				<li id="home"><a href="../index.html">Início</a></li>
-				<li id="contact"><a href="./contact.html">Contato</a></li>
-				<li id="about"><a href="./about.html">Sobre</a></li>
+                <li><a href="../index.html" class="logo">VR</a></li>
+                <li id="home"><a href="../index.html">Início</a></li>
+                <li id="contact"><a href="./contact.html">Contato</a></li>
+                <li id="about"><a href="./about.html">Sobre</a></li>
             </ul>
         </div>
 
         <div class="content-wrap">
-            <br><br>
+
             <div class="cover2">
                 <div>
                     <img class="avatar" src="../imgs/avatar.jpg" alt="github image">
@@ -112,23 +112,21 @@
                         </div>
                         <span>PlayStore</span>
                     </a>
-                    <br />
-                    <br />
                 </div>
             </div>
-            <br><br>
+
         </div>
 
         <div>
             <footer>
-                <p>Autor: Vivaldo Roque<br>
+                <p>Autor: Vivaldo Roque
                 </p>
             </footer>
         </div>
     </div>
 
     <script src="../js/navigation.js"></script>
-	<script src="../js/app.js"></script>
+    <script src="../js/app.js"></script>
 
     </body>
 
