--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
         <div class="content-wrap">
 
-            <div id="install-button"></div>
+            <div id="install-button" class="install-button">
+                <div>Instalar</div>
+            </div>
 
             <h1>
                 Tic Tac Toe
