made some fixes!

--- a/pages/about.html
+++ b/pages/about.html
@@ -29,6 +29,11 @@
 		</div>
 
 		<div class="content-wrap" style="text-align: justify; padding: 10px;">
+
+			<div id="install-button" class="install-button">
+                <div>Instalar</div>
+            </div>
+
 			<h1 style="text-align: center;">Tic tac Toe, jogo da velha ou jogo do galgo</h1>
 			<p class="text">
 				Em teoria da decisão, o minimax (ou minmax) é um método para minimizar a possível perda máxima. Pode ser
