--- a/pages/contact.html
+++ b/pages/contact.html
@@ -28,6 +28,10 @@
 
         <div class="content-wrap">
 
+            <div id="install-button" class="install-button">
+                <div>Instalar</div>
+            </div>
+
             <div class="cover2">
                 <div>
                     <img class="avatar" src="../imgs/avatar.jpg" alt="github image">
